--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "mdbook-content-loader"
-version = "0.1.2"
+version = "0.1.4"
 edition = "2021"
+authors = ["T Sawyer saylesss88@github.com"]
 description = "Injects content-collections.json into mdBook pages as a global variable"
 license = "Apache-2.0"
-repository = "https://github.com/saylesss88/mdbook-content-collections"
+repository = "https://github.com/saylesss88/mdbook-content-loader"
 readme = "README.md"
 keywords = [
 	"mdbook",
